lib/flutter_kiwi_ffi_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `src/flutter_kiwi_ffi.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class FlutterKiwiFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterKiwiFfiBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterKiwiFfiBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Initializes an analyzer instance.
  /// model_path can be null/empty for embedded/default model paths.
  ffi.Pointer<flutter_kiwi_ffi_handle_t> flutter_kiwi_ffi_init(
    ffi.Pointer<ffi.Char> model_path,
    int num_threads,
    int build_options,
    int match_options,
  ) {
    return _flutter_kiwi_ffi_init(
      model_path,
      num_threads,
      build_options,
      match_options,
    );
  }

  late final _flutter_kiwi_ffi_initPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<flutter_kiwi_ffi_handle_t> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('flutter_kiwi_ffi_init');
  late final _flutter_kiwi_ffi_init = _flutter_kiwi_ffi_initPtr
      .asFunction<
        ffi.Pointer<flutter_kiwi_ffi_handle_t> Function(
          ffi.Pointer<ffi.Char>,
          int,
          int,
          int,
        )
      >();

  /// Releases all resources for an analyzer instance.
  int flutter_kiwi_ffi_close(ffi.Pointer<flutter_kiwi_ffi_handle_t> handle) {
    return _flutter_kiwi_ffi_close(handle);
  }

  late final _flutter_kiwi_ffi_closePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<flutter_kiwi_ffi_handle_t>)
        >
      >('flutter_kiwi_ffi_close');
  late final _flutter_kiwi_ffi_close = _flutter_kiwi_ffi_closePtr
      .asFunction<int Function(ffi.Pointer<flutter_kiwi_ffi_handle_t>)>();

  /// Returns analysis output as a JSON string allocated by this library.
  /// Call flutter_kiwi_ffi_free_string to free the returned value.
  ffi.Pointer<ffi.Char> flutter_kiwi_ffi_analyze_json(
    ffi.Pointer<flutter_kiwi_ffi_handle_t> handle,
    ffi.Pointer<ffi.Char> text,
    int top_n,
    int match_options,
  ) {
    return _flutter_kiwi_ffi_analyze_json(handle, text, top_n, match_options);
  }

  late final _flutter_kiwi_ffi_analyze_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<flutter_kiwi_ffi_handle_t>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('flutter_kiwi_ffi_analyze_json');
  late final _flutter_kiwi_ffi_analyze_json = _flutter_kiwi_ffi_analyze_jsonPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<flutter_kiwi_ffi_handle_t>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
        )
      >();

  /// Adds a user word to the in-memory dictionary.
  int flutter_kiwi_ffi_add_user_word(
    ffi.Pointer<flutter_kiwi_ffi_handle_t> handle,
    ffi.Pointer<ffi.Char> word,
    ffi.Pointer<ffi.Char> tag,
    double score,
  ) {
    return _flutter_kiwi_ffi_add_user_word(handle, word, tag, score);
  }

  late final _flutter_kiwi_ffi_add_user_wordPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<flutter_kiwi_ffi_handle_t>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Float,
          )
        >
      >('flutter_kiwi_ffi_add_user_word');
  late final _flutter_kiwi_ffi_add_user_word =
      _flutter_kiwi_ffi_add_user_wordPtr
          .asFunction<
            int Function(
              ffi.Pointer<flutter_kiwi_ffi_handle_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              double,
            )
          >();

  /// Frees heap strings returned by this library.
  void flutter_kiwi_ffi_free_string(ffi.Pointer<ffi.Char> value) {
    return _flutter_kiwi_ffi_free_string(value);
  }

  late final _flutter_kiwi_ffi_free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'flutter_kiwi_ffi_free_string',
      );
  late final _flutter_kiwi_ffi_free_string = _flutter_kiwi_ffi_free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Returns last error for current thread. Returns null if there is no error.
  ffi.Pointer<ffi.Char> flutter_kiwi_ffi_last_error() {
    return _flutter_kiwi_ffi_last_error();
  }

  late final _flutter_kiwi_ffi_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'flutter_kiwi_ffi_last_error',
      );
  late final _flutter_kiwi_ffi_last_error = _flutter_kiwi_ffi_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Returns wrapper version.
  ffi.Pointer<ffi.Char> flutter_kiwi_ffi_version() {
    return _flutter_kiwi_ffi_version();
  }

  late final _flutter_kiwi_ffi_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'flutter_kiwi_ffi_version',
      );
  late final _flutter_kiwi_ffi_version = _flutter_kiwi_ffi_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();
}

/// Opaque native analyzer handle type used by the Kiwi FFI bridge.
final class flutter_kiwi_ffi_handle extends ffi.Opaque {}

/// Type alias for [flutter_kiwi_ffi_handle].
typedef flutter_kiwi_ffi_handle_t = flutter_kiwi_ffi_handle;
